--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -12,6 +12,7 @@
 ;自添加
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/Direct.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/AI.list
+ruleset=🔯 日本节点,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/BlueArchive.list
 ;这里的流媒体可以更改为使用某一机场
 ruleset=流媒体,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/Twitter.list
 ;Telegram，YouTube
@@ -42,12 +43,12 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 
 ;自定义
-custom_proxy_group=🤖 AI`select`[]🚀 节点选择`[]🔯 日本故转`[]🔯 美国故转
+custom_proxy_group=🤖 AI`select`[]🔯 日本节点`[]🚀 节点选择
 custom_proxy_group=流媒体`select`[]一分机场`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=一分机场`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🔯 日本故转`fallback`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 美国故转`fallback`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 日本节点`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
+;custom_proxy_group=🔯 美国节点`fallback`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
 
 
 enable_rule_generator=true
