--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -18,6 +18,7 @@ ruleset=流媒体,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/
 ;Telegram，YouTube
 ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=流媒体,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/ForYiFen.list
 
 
 ;原规则
