--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -13,12 +13,13 @@
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/Direct.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/AI.list
 ruleset=🔯 日本节点,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/BlueArchive.list
-;这里的流媒体可以更改为使用某一机场
-ruleset=流媒体,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/Twitter.list
+;这里的默认用一分指将某些流量更改为使用某一机场
+ruleset=默认用一分,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/Twitter.list
 ;Telegram，YouTube
-ruleset=流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
-ruleset=流媒体,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/ForYiFen.list
+ruleset=默认用一分,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=默认用一分,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+;自定义某些网址走一分机场
+ruleset=默认用一分,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/ForYiFen.list
 
 
 ;原规则
@@ -45,7 +46,7 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直
 
 ;自定义
 custom_proxy_group=🤖 AI`select`[]🔯 日本节点`[]🚀 节点选择
-custom_proxy_group=流媒体`select`[]一分机场`[]🚀 节点选择`[]♻️ 自动选择
+custom_proxy_group=默认用一分`select`[]一分机场`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=一分机场`url-test`.*`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🔯 日本节点`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
