--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -12,7 +12,7 @@
 ;自添加
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/Direct.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/AI.list
-ruleset=🔯 日本节点,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/BlueArchive.list
+ruleset=BlueArchive,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/BlueArchive.list
 ;这里的默认用一分指将某些流量更改为使用某一机场
 ruleset=默认用一分,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/Twitter.list
 ;Telegram，YouTube
@@ -45,6 +45,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 
 ;自定义
+custom_proxy_group=BlueArchive`select`[]🔯 日本节点`[]🚀 节点选择
 custom_proxy_group=🤖 AI`select`[]一分机场`[]🔯 日本节点`[]🚀 节点选择
 custom_proxy_group=默认用一分`select`[]一分机场`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=一分机场`url-test`.*`http://www.gstatic.com/generate_204`300,,50
