--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -45,7 +45,7 @@ custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`.*
 
 ;自定义
-custom_proxy_group=BlueArchive`select`[]🔯 日本节点`[]🚀 节点选择
+custom_proxy_group=BlueArchive`select`[]🔯 日本节点`[]🚀 节点选择`.*
 custom_proxy_group=🤖 AI`select`[]一分机场`[]🔯 日本节点`[]🚀 节点选择
 custom_proxy_group=默认用一分`select`[]一分机场`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=一分机场`url-test`.*`http://www.gstatic.com/generate_204`300,,50
