--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -15,7 +15,7 @@ ruleset=🤖 AI,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/AI
 ruleset=BlueArchive,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/BlueArchive.list
 ;这里的默认用一分指将某些流量更改为使用某一机场
 ;推特
-ruleset=默认用一分,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter_No_Resolve.yaml
+ruleset=默认用一分,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
 ;Telegram，YouTube
 ruleset=默认用一分,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=默认用一分,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
