--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -51,7 +51,7 @@ custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直
 custom_proxy_group=BlueArchive`select`[]🔯 日本节点`[]🚀 节点选择`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
 custom_proxy_group=🤖 AI`select`[]一分机场`[]🔯 日本节点`[]🚀 节点选择`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
 custom_proxy_group=默认用一分`select`[]一分机场`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=非日本代理`select`🔯 非日本节点`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
+custom_proxy_group=非日本代理`select`[]🔯 非日本节点`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
 
 custom_proxy_group=一分机场`url-test`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)`http://www.gstatic.com/generate_204`300,,50
 
