--- a/ACL4SSR_Online.ini
+++ b/ACL4SSR_Online.ini
@@ -41,22 +41,22 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
-custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`!!GROUPID=0!!(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
+custom_proxy_group=♻️ 自动选择`url-test`!!GROUPID=0!!(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)`http://www.gstatic.com/generate_204`300,,50
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
 
 ;自定义
-custom_proxy_group=BlueArchive`select`[]🔯 日本节点`[]🚀 节点选择`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
+custom_proxy_group=BlueArchive`select`[]🔯 日本节点`[]🚀 节点选择`!!GROUPID=0!!(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
 custom_proxy_group=🤖 AI`select`[]一分机场`[]🔯 日本节点`[]🚀 节点选择`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
 custom_proxy_group=默认用一分`select`[]一分机场`[]🚀 节点选择`[]♻️ 自动选择
 custom_proxy_group=非日本代理`select`[]🔯 非日本节点`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)
 
-custom_proxy_group=一分机场`url-test`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=一分机场`url-test`!!GROUPID=1!!(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量)).*)`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🔯 非日本节点`url-test`(^(?!.*(重置|机场|优惠|官方|佣金|订阅|流量|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 日本节点`url-test`(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(重置|机场|优惠|官方|佣金|订阅|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 日本节点`url-test`!!GROUPID=0!!(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(重置|机场|优惠|官方|佣金|订阅|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
 ;custom_proxy_group=🔯 美国节点`fallback`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(重置|机场|优惠|官方|佣金|订阅|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
 
 
