--- a/ACL4SSR_cys.ini
+++ b/ACL4SSR_cys.ini
@@ -12,54 +12,53 @@
 ;自添加
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/Direct.list
 ruleset=🤖 AI,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/AI.list
-ruleset=非日本代理,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/NoJP.list
-ruleset=BlueArchive,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/BlueArchive.list
+ruleset=🎞️ 非日本节点,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/NoJP.list
+ruleset=🎮 BlueArchive,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/BlueArchive.list
 ;这里的默认用一分指将某些流量更改为使用某一机场
 ;推特
-ruleset=默认用一分,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
+ruleset=🌍 默认用一分,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Twitter/Twitter.list
 ;Telegram，YouTube
-ruleset=默认用一分,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
-ruleset=默认用一分,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🌍 默认用一分,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
+ruleset=🌍 默认用一分,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ;自定义某些网址走一分机场
-ruleset=默认用一分,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/ForYiFen.list
+ruleset=🌍 默认用一分,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/ForYiFen.list
 
 
 
 ;原规则
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
-;ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
-;ruleset=🛑 全球拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanProgramAD.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/GoogleCN.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/SteamCN.list
-ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyMedia.list
 ruleset=🚀 节点选择,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyLite.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
-;ruleset=🎯 全球直连,[]GEOIP,LAN
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量)).*)
-custom_proxy_group=♻️ 自动选择`url-test`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 自动选择
-;custom_proxy_group=🛑 全球拦截`select`[]REJECT`[]DIRECT
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量)).*)
+custom_proxy_group=🚀 节点选择`select`[]♻️ 超实惠`[]♻️ 一分`[]♻️ sakura`[]DIRECT`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
+custom_proxy_group=🌍 默认用一分`select`[]♻️ 一分`[]🚀 节点选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
+custom_proxy_group=🎮 BlueArchive`select`[]🔯 超实惠|日美等`[]🔯 sakura|日美等`!!GROUPID=!1!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
+custom_proxy_group=🤖 AI`select`[]🔯 sakura|日美等`[]🔯 超实惠|日美等`[]🔯 一分|日美等`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
+custom_proxy_group=🎞️ 非日本节点`select`[]⭐ 一分|非日``[]⭐ 超实惠|非日[]⭐ sakura|非日`(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
 
-;自定义
-custom_proxy_group=BlueArchive`select`[]🔯 日本节点`[]sakurcat 日本`[]🚀 节点选择`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量)).*)
-custom_proxy_group=🤖 AI`select`[]sakurcat 日本`[]一分机场`[]🔯 日本节点`[]🚀 节点选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量)).*)
-custom_proxy_group=默认用一分`select`[]一分机场`[]🚀 节点选择`[]♻️ 自动选择
-custom_proxy_group=非日本代理`select`[]🔯 非日本节点`!!GROUPID=!2!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量)).*)
 
-custom_proxy_group=一分机场`url-test`!!GROUPID=1!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 超实惠`url-test`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 一分`url-test`!!GROUPID=1!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ sakura`url-test`!!GROUPID=2!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=sakurcat 日本`url-test`!!GROUPID=2!!(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 超实惠|日美等`url-test`!!GROUPID=0!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 一分|日美等`url-test`!!GROUPID=1!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 sakura|日美等`url-test`!!GROUPID=2!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🔯 非日本节点`url-test`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 日本节点`url-test`!!GROUPID=0!!(?=.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan))^((?!(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
-;custom_proxy_group=🔯 美国节点`fallback`(?=.*(美|波特兰|达拉斯|俄勒冈|凤凰城|费利蒙|硅谷|拉斯维加斯|洛杉矶|圣何塞|圣克拉拉|西雅图|芝加哥|US|United States))^((?!(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|深港|家宽|游戏|剩余|流量|0.5|0.5倍|0.5x|2.0|2倍|2x|3.0|3倍|3x|4.0|4倍|4x|5.0|5倍|5x)).)*$`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⭐ 超实惠|非日`url-test`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⭐ 一分|非日`url-test`!!GROUPID=1!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⭐ sakura|非日`url-test`!!GROUPID=2!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+
+
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 超实惠
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 超实惠`[]♻️ 一分`[]♻️ sakura`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
 
 
 enable_rule_generator=true
