--- a/ACL4SSR_cys.ini
+++ b/ACL4SSR_cys.ini
@@ -41,7 +41,7 @@ custom_proxy_group=🚀 节点选择`select`[]♻️ 超实惠`[]♻️ 一分`[
 custom_proxy_group=🌍 默认用一分`select`[]♻️ 一分`[]🚀 节点选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
 custom_proxy_group=🎮 BlueArchive`select`[]🔯 超实惠|日美等`[]🔯 sakura|日美等`!!GROUPID=!1!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
 custom_proxy_group=🤖 AI`select`[]🔯 sakura|日美等`[]🔯 超实惠|日美等`[]🔯 一分|日美等`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
-custom_proxy_group=🎞️ 非日本节点`select`[]⭐ 一分|非日``[]⭐ 超实惠|非日[]⭐ sakura|非日`(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
+custom_proxy_group=🎞️ 非日本节点`select`[]⭐ 一分|非日`[]⭐ 超实惠|非日`[]⭐ sakura|非日`(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
 
 
 custom_proxy_group=♻️ 超实惠`url-test`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
