--- a/ACL4SSR_cys.ini
+++ b/ACL4SSR_cys.ini
@@ -57,7 +57,7 @@ custom_proxy_group=⭐ 一分|非日`url-test`!!GROUPID=1!!(^(?!.*(日本|川日
 custom_proxy_group=⭐ sakura|非日`url-test`!!GROUPID=2!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
 
 
-custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择`[]♻️ 超实惠
+custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
 custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 超实惠`[]♻️ 一分`[]♻️ sakura`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
 
 
