--- a/ACL4SSR_cys.ini
+++ b/ACL4SSR_cys.ini
@@ -37,28 +37,28 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 超实惠`[]♻️ 一分`[]♻️ sakura`[]DIRECT`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
-custom_proxy_group=🌍 默认用一分`select`[]♻️ 一分`[]🚀 节点选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
-custom_proxy_group=🎮 BlueArchive`select`[]🔯 超实惠|日美等`[]🔯 sakura|日美等`!!GROUPID=!1!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
-custom_proxy_group=🤖 AI`select`[]🔯 sakura|日美等`[]🔯 超实惠|日美等`[]🔯 一分|日美等`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
-custom_proxy_group=🎞️ 非日本节点`select`[]⭐ 一分|非日`[]⭐ 超实惠|非日`[]⭐ sakura|非日`(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
+custom_proxy_group=🚀 节点选择`select`[]♻️ 超实惠`[]♻️ 一分`[]♻️ sakura`[]DIRECT`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)
+custom_proxy_group=🌍 默认用一分`select`[]♻️ 一分`[]🚀 节点选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)
+custom_proxy_group=🎮 BlueArchive`select`[]🔯 超实惠|日美等`[]🔯 sakura|日美等`!!GROUPID=!1!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)
+custom_proxy_group=🤖 AI`select`[]🔯 sakura|日美等`[]🔯 超实惠|日美等`[]🔯 一分|日美等`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)
+custom_proxy_group=🎞️ 非日本节点`select`[]⭐ 一分|非日`[]⭐ 超实惠|非日`[]⭐ sakura|非日`(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)
 
 
-custom_proxy_group=♻️ 超实惠`url-test`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ 一分`url-test`!!GROUPID=1!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=♻️ sakura`url-test`!!GROUPID=2!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 超实惠`url-test`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 一分`url-test`!!GROUPID=1!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ sakura`url-test`!!GROUPID=2!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🔯 超实惠|日美等`url-test`!!GROUPID=0!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 一分|日美等`url-test`!!GROUPID=1!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=🔯 sakura|日美等`url-test`!!GROUPID=2!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 超实惠|日美等`url-test`!!GROUPID=0!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 一分|日美等`url-test`!!GROUPID=1!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 sakura|日美等`url-test`!!GROUPID=2!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=⭐ 超实惠|非日`url-test`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⭐ 一分|非日`url-test`!!GROUPID=1!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
-custom_proxy_group=⭐ sakura|非日`url-test`!!GROUPID=2!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⭐ 超实惠|非日`url-test`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⭐ 一分|非日`url-test`!!GROUPID=1!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⭐ sakura|非日`url-test`!!GROUPID=2!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)`http://www.gstatic.com/generate_204`300,,50
 
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 超实惠`[]♻️ 一分`[]♻️ sakura`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|0.1|0.5)).*)
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 超实惠`[]♻️ 一分`[]♻️ sakura`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|0.1|0.5|5|6|7|8|9|10)).*)
 
 
 enable_rule_generator=true
