--- a/ACL4SSR_yy.ini
+++ b/ACL4SSR_yy.ini
@@ -22,7 +22,8 @@ ruleset=🍀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_s
 ruleset=🍀 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ;自定义某些网址走一分机场
 ruleset=🍀 流媒体,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/ForYiFen.list
-
+;哔哩哔哩港澳台解锁
+ruleset=🧸 bilibili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
 
 
 ;原规则
@@ -37,20 +38,23 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
+custom_proxy_group=🚀 节点选择`select`[]🔯 自动选择`[]DIRECT`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
 custom_proxy_group=🎮 日美等节点`select`[]🔯 自动选择|日美等`!!GROUPID=0!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
-custom_proxy_group=🎞️ 非日本节点`select`[]⭐ 自动选择|非日`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
+custom_proxy_group=🎞️ 非日本节点`select`[]🔯 自动选择|非日`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
 custom_proxy_group=🍀 流媒体`select`[]便宜节点`[]🚀 节点选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
+custom_proxy_group=🧸 bilibili`select`[]🎯 全球直连`[]🔯 自动选择|港澳台`[]🔯 自动选择`!!GROUPID=0!!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3))
 
 
 
-custom_proxy_group=便宜节点`url-test`!!GROUPID=1!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 便宜节点`url-test`!!GROUPID=1!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=♻️ 自动选择`url-test`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 自动选择`url-test`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
 
 custom_proxy_group=🔯 自动选择|日美等`url-test`!!GROUPID=0!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=⭐ 自动选择|非日`url-test`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 自动选择|非日`url-test`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
+
+custom_proxy_group=🔯 自动选择|港澳台`url-test`!!GROUPID=0!!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3))`http://www.gstatic.com/generate_204`300,,50
 
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
