--- a/ACL4SSR_yy.ini
+++ b/ACL4SSR_yy.ini
@@ -41,7 +41,7 @@ ruleset=🐟 漏网之鱼,[]FINAL
 custom_proxy_group=🚀 节点选择`select`[]🔯 自动选择`[]DIRECT`!!GROUPID=0!!(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
 custom_proxy_group=🎮 日美等节点`select`[]🔯 自动选择|日美等`!!GROUPID=0!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
 custom_proxy_group=🎞️ 非日本节点`select`[]🔯 自动选择|非日`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
-custom_proxy_group=🍀 流媒体`select`[]便宜节点`[]🚀 节点选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
+custom_proxy_group=🍀 流媒体`select`[]♻️ 便宜节点`[]🚀 节点选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
 custom_proxy_group=🧸 bilibili`select`[]🎯 全球直连`[]🔯 自动选择|港澳台`[]🔯 自动选择`!!GROUPID=0!!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3))
 
 
