--- a/ACL4SSR_two.ini
+++ b/ACL4SSR_two.ini
@@ -23,8 +23,8 @@ ruleset=🍀 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/
 ;自定义某些网址走一分机场
 ruleset=🍀 流媒体,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/ForYiFen.list
 ;哔哩哔哩港澳台解锁
-ruleset=🧸 bilibili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
-
+;ruleset=🧸 bilibili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
+ruleset=🧸 bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 
 ;原规则
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
