--- a/ACL4SSR_two.ini
+++ b/ACL4SSR_two.ini
@@ -24,7 +24,7 @@ ruleset=🍀 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/
 ruleset=🍀 流媒体,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/ForYiFen.list
 ;哔哩哔哩港澳台解锁
 ;ruleset=🧸 bilibili,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/BiliBili/BiliBili.list
-ruleset=🧸 bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
+;ruleset=🧸 bilibili,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/BilibiliHMT.list
 
 ;原规则
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
@@ -42,7 +42,7 @@ custom_proxy_group=🚀 节点选择`select`[]🔯 自动选择`[]DIRECT`!!GROUP
 custom_proxy_group=🎮 日美等节点`select`[]🔯 自动选择|日美等`!!GROUPID=0!!(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|超时|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
 custom_proxy_group=🎞️ 非日本节点`select`[]🔯 自动选择|非日`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|超时|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
 custom_proxy_group=🍀 流媒体`select`[]♻️ 便宜节点`[]🚀 节点选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|超时|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
-custom_proxy_group=🧸 bilibili`select`[]🎯 全球直连`[]🔯 自动选择|港澳台`[]🔯 自动选择`!!GROUPID=0!!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|超时|游戏|消耗|0.1|0.5|5x|x8|x3))
+;custom_proxy_group=🧸 bilibili`select`[]🎯 全球直连`[]🔯 自动选择|港澳台`[]🔯 自动选择`!!GROUPID=0!!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|超时|游戏|消耗|0.1|0.5|5x|x8|x3))
 
 
 
@@ -54,7 +54,7 @@ custom_proxy_group=🔯 自动选择|日美等`url-test`!!GROUPID=0!!(^(?!.*(香
 
 custom_proxy_group=🔯 自动选择|非日`url-test`!!GROUPID=0!!(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|超时|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🔯 自动选择|港澳台`url-test`!!GROUPID=0!!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|超时|游戏|消耗|0.1|0.5|5x|x8|x3))`http://www.gstatic.com/generate_204`300,,50
+;custom_proxy_group=🔯 自动选择|港澳台`url-test`!!GROUPID=0!!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|超时|游戏|消耗|0.1|0.5|5x|x8|x3))`http://www.gstatic.com/generate_204`300,,50
 
 
 
