--- a/ACL4SSR_two.ini
+++ b/ACL4SSR_two.ini
@@ -12,7 +12,7 @@
 ;自添加
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/DirectOwn.list
 ruleset=🎮 日美等节点,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/AI.list
-;ruleset=🎮 日美等节点,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/BlueArchive.list
+ruleset=🎮 日美等节点,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/BlueArchive.list
 ruleset=🎞️ 非日本节点,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/NoJP.list
 ;这里的默认用一分指将某些流量更改为使用某一机场
 ;推特
