--- a/ACL4SSR_two.ini
+++ b/ACL4SSR_two.ini
@@ -20,6 +20,8 @@ ruleset=🍀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_s
 ;Telegram，YouTube
 ruleset=🍀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Telegram/Telegram.list
 ruleset=🍀 流媒体,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
+ruleset=🍀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/GitHub/GitHub.list
+ruleset=🍀 流媒体,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Google/Google.list
 ;自定义某些网址走一分机场
 ruleset=🍀 流媒体,https://raw.githubusercontent.com/jldxnb/openclash-rules/main/rule/ForYiFen.list
 ;哔哩哔哩港澳台解锁
