--- a/ACL4SSR_one.ini
+++ b/ACL4SSR_one.ini
@@ -37,21 +37,21 @@ ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=🎯 全球直连,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
 
-custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
-custom_proxy_group=🎮 BlueArchive`select`[]🔯 自动选择|日美等`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
-custom_proxy_group=🤖 AI`select`[]🔯 自动选择|日美等`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
-custom_proxy_group=🎞️ 非日本节点`select`[]⭐ 自动选择|非日`(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
+custom_proxy_group=🚀 节点选择`select`[]♻️ 自动选择`[]DIRECT`(^(?!.*(超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
+custom_proxy_group=🎮 BlueArchive`select`[]🔯 自动选择|日美等`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
+custom_proxy_group=🤖 AI`select`[]🔯 自动选择|日美等`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
+custom_proxy_group=🎞️ 非日本节点`select`[]⭐ 自动选择|非日`(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
 
 
-custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=♻️ 自动选择`url-test`(^(?!.*(超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=🔯 自动选择|日美等`url-test`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=🔯 自动选择|日美等`url-test`(^(?!.*(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW|超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
 
-custom_proxy_group=⭐ 自动选择|非日`url-test`(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
+custom_proxy_group=⭐ 自动选择|非日`url-test`(^(?!.*(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan|超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)`http://www.gstatic.com/generate_204`300,,50
 
 
 custom_proxy_group=🎯 全球直连`select`[]DIRECT`[]🚀 节点选择
-custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`(^(?!.*(重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
+custom_proxy_group=🐟 漏网之鱼`select`[]🚀 节点选择`[]🎯 全球直连`[]♻️ 自动选择`(^(?!.*(超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3)).*)
 
 
 enable_rule_generator=true
