Update and rename yuyun.yaml to one.yaml

--- a/one.yaml
+++ b/one.yaml
@@ -12,7 +12,7 @@ proxy-providers:
     override:
       skip-cert-verify: true
       #additional-prefix: "渔云|"
-    exclude-filter: "(?!)超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3"
+    exclude-filter: "超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3"
     url: "订阅"
 
 # 用于下载订阅时指定UA
