--- a/two.yaml
+++ b/two.yaml
@@ -11,11 +11,25 @@ proxy-providers:
       interval: 300
     override:
       skip-cert-verify: true
-      #additional-prefix: "渔云|"
+      additional-prefix: "渔云|"
     exclude-filter: "超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3"
     url: "订阅"
 
-proxy-providers:
+  stable1:
+    type: http
+    interval: 3600
+    proxy: DIRECT
+    health-check:
+      enable: true
+      url: https://www.gstatic.com/generate_204
+      timeout: 5000
+      interval: 300
+    override:
+      skip-cert-verify: true
+      additional-prefix: "猫咪|"
+    exclude-filter: "超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3"
+    url: "订阅"
+
   cheap:
     type: http
     interval: 3600
@@ -27,7 +41,7 @@ proxy-providers:
       interval: 300
     override:
       skip-cert-verify: true
-      #additional-prefix: "渔云|"
+      additional-prefix: "一分|"
     exclude-filter: "超时|重置|机场|直连|优惠|官方|官网|到期|配置|更新|佣金|订阅|BT|流量|游戏|消耗|0.1|0.5|5x|x8|x3"
     url: "订阅"
 
@@ -158,18 +172,22 @@ dns:
   
 # 策略组
 proxy-groups:
-  - {name: 🚀 节点选择, type: select, proxies: [🔯 自动选择, ♻️ 便宜节点], include-all: true}
-  - {name: 🎮 日美等节点, type: select, proxies: [🔯 自动选择|日美等], include-all: true, filter: "^((?!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)).)*$" }
-  - {name: 🎞️ 非日本节点, type: select, proxies: [🔯 自动选择|非日], include-all: true, filter: "^((?!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)).)*$" }
+  - {name: 🚀 节点选择, type: select, proxies: [🔯 自动选择, 🔯 自动选择1, ♻️ 便宜节点], include-all: true}
+  - {name: 🎮 日美等节点, type: select, proxies: [🔯 自动选择|日美等, 🔯 自动选择|日美等1], include-all: true, filter: "^((?!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)).)*$" }
+  - {name: 🎞️ 非日本节点, type: select, proxies: [🔯 自动选择|非日, 🔯 自动选择|非日1], include-all: true, filter: "^((?!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)).)*$" }
   - {name: 🍀 便宜节点, type: select, proxies: [♻️ 便宜节点, 🚀 节点选择], include-all: true, filter: "^((?!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)).)*$" }
+  - {name: ✈️ Speedtest, type: select, proxies: [🔯 自动选择, 🔯 自动选择1, ♻️ 便宜节点], include-all: true}
+  
 
-
-  - {name: ♻️ 便宜节点, type: url-test, use: [cheap], include-all: true, tolerance: 20, interval: 300}
-  - {name: 🔯 自动选择, type: url-test, use: [stable], include-all: true, tolerance: 20, interval: 300}
+  - {name: ♻️ 便宜节点, type: url-test, use: [cheap], tolerance: 20, interval: 300}
+  - {name: 🔯 自动选择, type: url-test, use: [stable], tolerance: 20, interval: 300}
   - {name: 🔯 自动选择|日美等, type: url-test, use: [stable], tolerance: 20, interval: 300, filter: "^((?!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)).)*$" }
   - {name: 🔯 自动选择|非日, type: url-test, use: [stable], tolerance: 20, interval: 300, filter: "^((?!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)).)*$" }
+  - {name: 🔯 自动选择1, type: url-test, use: [stable1], tolerance: 20, interval: 300}
+  - {name: 🔯 自动选择|日美等1, type: url-test, use: [stable1], tolerance: 20, interval: 300, filter: "^((?!(香港|HK|Hong Kong|🇭🇰|HongKong|台湾|TW)).)*$" }
+  - {name: 🔯 自动选择|非日1, type: url-test, use: [stable1], tolerance: 20, interval: 300, filter: "^((?!(日本|川日|东京|大阪|泉日|埼玉|沪日|深日|JP|Japan)).)*$" }
 
-  - {name: ✈️ Speedtest, type: select, proxies: [🔯 自动选择, ♻️ 便宜节点], include-all: true}
+
   - {name: 🎯 全球直连, type: select, proxies: [DIRECT, 🚀 节点选择]}
   - {name: 🐟 漏网之鱼, type: select, proxies: [🚀 节点选择, 🎯 全球直连]}
 rules:
